# AI-Expense-Analyzer

./: .gitignore  README.md  ai_insights.py  analyze.py  config.py  main.py  models.py  parse_xls.py  pyproject.toml
backend/: check_gemini_models.py  pyproject.toml
backend/app/: ai_insights.py  analytics.py  analyze.py  api.py  config.py  main.py  pdf_utils.py
backend/app/providers/: __init__.py  base.py  claude.py  gemini.py  groq.py  openai.py  openrouter.py
frontend/: app.py
providers/: __init__.py  claude.py  gemini.py  groq.py  openai.py  openrouter.py
